polyProg/interpreter/PolyParser.py
# Generated from C:/Users/User/antlr4_Python3_examples/polyProg/Poly.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PolyParser ( Parser ):

    grammarFileName = "Poly.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'main'", "'{'", "'}'", "';'", "'='", 
                     "'if'", "'('", "')'", "'else'", "'while'", "'for'", 
                     "'do'", "'print'", "','", "'readline'", "'int'", "'double'", 
                     "'bool'", "'+'", "'-'", "'*'", "'/'", "'^'", "'true'", 
                     "'false'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "COMMENT", "ID", "FLOAT", "INT", "NEWLINE", "WS" ]

    RULE_program = 0
    RULE_variableDeclaration = 1
    RULE_statement = 2
    RULE_assignment = 3
    RULE_ifStatement = 4
    RULE_whileStatement = 5
    RULE_forStatement = 6
    RULE_doWhileStatement = 7
    RULE_printStatement = 8
    RULE_printArgument = 9
    RULE_readlineStatement = 10
    RULE_type = 11
    RULE_expression = 12
    RULE_additiveExpression = 13
    RULE_multiplicativeExpression = 14
    RULE_powerExpression = 15
    RULE_unaryExpression = 16
    RULE_primaryExpression = 17
    RULE_boolExpression = 18

    ruleNames =  [ "program", "variableDeclaration", "statement", "assignment", 
                   "ifStatement", "whileStatement", "forStatement", "doWhileStatement", 
                   "printStatement", "printArgument", "readlineStatement", 
                   "type", "expression", "additiveExpression", "multiplicativeExpression", 
                   "powerExpression", "unaryExpression", "primaryExpression", 
                   "boolExpression" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    COMMENT=32
    ID=33
    FLOAT=34
    INT=35
    NEWLINE=36
    WS=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolyParser.VariableDeclarationContext)
            else:
                return self.getTypedRuleContext(PolyParser.VariableDeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolyParser.StatementContext)
            else:
                return self.getTypedRuleContext(PolyParser.StatementContext,i)


        def getRuleIndex(self):
            return PolyParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = PolyParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(PolyParser.T__0)
            self.state = 39
            self.match(PolyParser.T__1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 458752) != 0):
                self.state = 40
                self.variableDeclaration()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 77309459520) != 0):
                self.state = 46
                self.statement()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 52
            self.match(PolyParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(PolyParser.TypeContext,0)


        def ID(self):
            return self.getToken(PolyParser.ID, 0)

        def getRuleIndex(self):
            return PolyParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)




    def variableDeclaration(self):

        localctx = PolyParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_variableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.type_()
            self.state = 55
            self.match(PolyParser.ID)
            self.state = 56
            self.match(PolyParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PolyParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ReadlineStContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PolyParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def readlineStatement(self):
            return self.getTypedRuleContext(PolyParser.ReadlineStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadlineSt" ):
                listener.enterReadlineSt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadlineSt" ):
                listener.exitReadlineSt(self)


    class EmptyStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PolyParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEWLINE(self):
            return self.getToken(PolyParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmptyStatement" ):
                listener.enterEmptyStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmptyStatement" ):
                listener.exitEmptyStatement(self)


    class PrintStContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PolyParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def printStatement(self):
            return self.getTypedRuleContext(PolyParser.PrintStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintSt" ):
                listener.enterPrintSt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintSt" ):
                listener.exitPrintSt(self)


    class WhileStContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PolyParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def whileStatement(self):
            return self.getTypedRuleContext(PolyParser.WhileStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileSt" ):
                listener.enterWhileSt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileSt" ):
                listener.exitWhileSt(self)


    class AssignmentStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PolyParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assignment(self):
            return self.getTypedRuleContext(PolyParser.AssignmentContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentStatement" ):
                listener.enterAssignmentStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentStatement" ):
                listener.exitAssignmentStatement(self)


    class DoWhileStContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PolyParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def doWhileStatement(self):
            return self.getTypedRuleContext(PolyParser.DoWhileStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoWhileSt" ):
                listener.enterDoWhileSt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoWhileSt" ):
                listener.exitDoWhileSt(self)


    class ForStatContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PolyParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def forStatement(self):
            return self.getTypedRuleContext(PolyParser.ForStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStat" ):
                listener.enterForStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStat" ):
                listener.exitForStat(self)


    class IfStContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PolyParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifStatement(self):
            return self.getTypedRuleContext(PolyParser.IfStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfSt" ):
                listener.enterIfSt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfSt" ):
                listener.exitIfSt(self)



    def statement(self):

        localctx = PolyParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 72
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [33]:
                localctx = PolyParser.AssignmentStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.assignment()
                self.state = 59
                self.match(PolyParser.T__3)
                pass
            elif token in [6]:
                localctx = PolyParser.IfStContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.ifStatement()
                pass
            elif token in [10]:
                localctx = PolyParser.WhileStContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 62
                self.whileStatement()
                pass
            elif token in [11]:
                localctx = PolyParser.ForStatContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 63
                self.forStatement()
                pass
            elif token in [12]:
                localctx = PolyParser.DoWhileStContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 64
                self.doWhileStatement()
                pass
            elif token in [13]:
                localctx = PolyParser.PrintStContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 65
                self.printStatement()
                self.state = 66
                self.match(PolyParser.T__3)
                pass
            elif token in [15]:
                localctx = PolyParser.ReadlineStContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 68
                self.readlineStatement()
                self.state = 69
                self.match(PolyParser.T__3)
                pass
            elif token in [36]:
                localctx = PolyParser.EmptyStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 71
                self.match(PolyParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PolyParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(PolyParser.ExpressionContext,0)


        def getRuleIndex(self):
            return PolyParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = PolyParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(PolyParser.ID)
            self.state = 75
            self.match(PolyParser.T__4)
            self.state = 76
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def boolExpression(self):
            return self.getTypedRuleContext(PolyParser.BoolExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolyParser.StatementContext)
            else:
                return self.getTypedRuleContext(PolyParser.StatementContext,i)


        def getRuleIndex(self):
            return PolyParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)




    def ifStatement(self):

        localctx = PolyParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(PolyParser.T__5)
            self.state = 79
            self.match(PolyParser.T__6)
            self.state = 80
            self.boolExpression()
            self.state = 81
            self.match(PolyParser.T__7)
            self.state = 82
            self.match(PolyParser.T__1)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 77309459520) != 0):
                self.state = 83
                self.statement()
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 89
            self.match(PolyParser.T__2)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 90
                self.match(PolyParser.T__8)
                self.state = 91
                self.match(PolyParser.T__1)
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 77309459520) != 0):
                    self.state = 92
                    self.statement()
                    self.state = 97
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 98
                self.match(PolyParser.T__2)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def boolExpression(self):
            return self.getTypedRuleContext(PolyParser.BoolExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolyParser.StatementContext)
            else:
                return self.getTypedRuleContext(PolyParser.StatementContext,i)


        def getRuleIndex(self):
            return PolyParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)




    def whileStatement(self):

        localctx = PolyParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_whileStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(PolyParser.T__9)
            self.state = 102
            self.match(PolyParser.T__6)
            self.state = 103
            self.boolExpression()
            self.state = 104
            self.match(PolyParser.T__7)
            self.state = 105
            self.match(PolyParser.T__1)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 77309459520) != 0):
                self.state = 106
                self.statement()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 112
            self.match(PolyParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolyParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(PolyParser.AssignmentContext,i)


        def boolExpression(self):
            return self.getTypedRuleContext(PolyParser.BoolExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolyParser.StatementContext)
            else:
                return self.getTypedRuleContext(PolyParser.StatementContext,i)


        def getRuleIndex(self):
            return PolyParser.RULE_forStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStatement" ):
                listener.enterForStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStatement" ):
                listener.exitForStatement(self)




    def forStatement(self):

        localctx = PolyParser.ForStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_forStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(PolyParser.T__10)
            self.state = 115
            self.match(PolyParser.T__6)
            self.state = 116
            self.assignment()
            self.state = 117
            self.match(PolyParser.T__3)
            self.state = 118
            self.boolExpression()
            self.state = 119
            self.match(PolyParser.T__3)
            self.state = 120
            self.assignment()
            self.state = 121
            self.match(PolyParser.T__7)
            self.state = 122
            self.match(PolyParser.T__1)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 77309459520) != 0):
                self.state = 123
                self.statement()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 129
            self.match(PolyParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoWhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def boolExpression(self):
            return self.getTypedRuleContext(PolyParser.BoolExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolyParser.StatementContext)
            else:
                return self.getTypedRuleContext(PolyParser.StatementContext,i)


        def getRuleIndex(self):
            return PolyParser.RULE_doWhileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoWhileStatement" ):
                listener.enterDoWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoWhileStatement" ):
                listener.exitDoWhileStatement(self)




    def doWhileStatement(self):

        localctx = PolyParser.DoWhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_doWhileStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(PolyParser.T__11)
            self.state = 132
            self.match(PolyParser.T__1)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 77309459520) != 0):
                self.state = 133
                self.statement()
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 139
            self.match(PolyParser.T__2)
            self.state = 140
            self.match(PolyParser.T__9)
            self.state = 141
            self.match(PolyParser.T__6)
            self.state = 142
            self.boolExpression()
            self.state = 143
            self.match(PolyParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def printArgument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolyParser.PrintArgumentContext)
            else:
                return self.getTypedRuleContext(PolyParser.PrintArgumentContext,i)


        def getRuleIndex(self):
            return PolyParser.RULE_printStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStatement" ):
                listener.enterPrintStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStatement" ):
                listener.exitPrintStatement(self)




    def printStatement(self):

        localctx = PolyParser.PrintStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_printStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(PolyParser.T__12)
            self.state = 146
            self.match(PolyParser.T__6)
            self.state = 147
            self.printArgument()
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 148
                self.match(PolyParser.T__13)
                self.state = 149
                self.printArgument()
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 155
            self.match(PolyParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintArgumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(PolyParser.ExpressionContext,0)


        def getRuleIndex(self):
            return PolyParser.RULE_printArgument

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintArgument" ):
                listener.enterPrintArgument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintArgument" ):
                listener.exitPrintArgument(self)




    def printArgument(self):

        localctx = PolyParser.PrintArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_printArgument)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReadlineStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PolyParser.ID)
            else:
                return self.getToken(PolyParser.ID, i)

        def getRuleIndex(self):
            return PolyParser.RULE_readlineStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadlineStatement" ):
                listener.enterReadlineStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadlineStatement" ):
                listener.exitReadlineStatement(self)




    def readlineStatement(self):

        localctx = PolyParser.ReadlineStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_readlineStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(PolyParser.T__14)
            self.state = 160
            self.match(PolyParser.T__6)
            self.state = 161
            self.match(PolyParser.ID)
            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 162
                self.match(PolyParser.T__13)
                self.state = 163
                self.match(PolyParser.ID)
                self.state = 168
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 169
            self.match(PolyParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PolyParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = PolyParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 458752) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def additiveExpression(self):
            return self.getTypedRuleContext(PolyParser.AdditiveExpressionContext,0)


        def getRuleIndex(self):
            return PolyParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = PolyParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.additiveExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AdditiveExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def multiplicativeExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolyParser.MultiplicativeExpressionContext)
            else:
                return self.getTypedRuleContext(PolyParser.MultiplicativeExpressionContext,i)


        def getRuleIndex(self):
            return PolyParser.RULE_additiveExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdditiveExpression" ):
                listener.enterAdditiveExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdditiveExpression" ):
                listener.exitAdditiveExpression(self)




    def additiveExpression(self):
